k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api
  namespace: healthbox-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      labels:
        app: node-api
    spec:
      # Optional: wait for Mongo before starting
      imagePullSecrets:
        - name: dockerhub-cred
      containers:
        - name: node-api
          image: ashutoshpandey/healthbox-api:dev1.4
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet: { path: /health, port: http }
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /health, port: http }
            initialDelaySeconds: 30
            periodSeconds: 10
          startupProbe:
            httpGet: { path: /health, port: http }
            failureThreshold: 30
            periodSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: node-api
  namespace: healthbox-api
spec:
  type: ClusterIP
  selector:
    app: node-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
