k8s/mongo-net-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-allow-api-only
  namespace: healthbox-api
spec:
  podSelector:
    matchLabels:
      app: mongo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: node-api
      ports:
        - protocol: TCP
          port: 27017
